# shell

./: CMakeLists.txt  main.c
src/: output_dud.txt
